--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
 
   <div class="container">
-    <h1>Добро пожаловть на курс Теория Конечных Автоматов</h1>
+    <h1>Теория Конечных Автоматов</h1>
     <p>
 
     </p>
