--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="navbar">
     <a href="#">Лекции</a>
-    <a href="#">Лабораторные</a>
+    <a href="labs.html">Labs</a>
     <a href="#">Программа</a>
   </div>
 
