--- a/labs.html
+++ b/labs.html
@@ -56,9 +56,9 @@
 <body>
 
   <div class="navbar">
-    <a href="lectures.html">Lectures</a>
-    <a href="labs.html">Labs</a>
-    <a href="syllabus.html">Syllabus</a>
+    <a href="#">Лекции</a>
+    <a href="labs.html">Лабораторные</a>
+    <a href="#">Программа</a>
   </div>
 
   <div class="container">
